# apicli

./: .gitignore  pyproject.toml  setup.cfg
apicli/jira/: creds.json.example  pull_all_attachments_from_project.py
