name = "apicli"
version = "0.0.1"
authors = [
  { name="Shawn McNaughton", email="shawngmc@gmail.com" },
]
description = "API CLI scripts"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
dependencies = [
  'jira >= 3.4.1',
]

[project.urls]
"Homepage" = "https://github.com/shawngmc/apicli"
"Bug Tracker" = "https://github.com/shawngmc/apicli/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
